Work on implementing aapi to enable true SPA
Work on migrating to java 11, lots of library version bumps